--- a/reports/readyapireports/all-tests.html
+++ b/reports/readyapireports/all-tests.html
@@ -12,10 +12,13 @@
 <tr valign="top">
 <th>Class</th><th>Name</th><th>Status</th><th width="80%">Type</th><th nowrap>Time (s)</th>
 </tr>
+<tr valign="top" class="TableRowColor">
+<td><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html">EE Composit2.Event Engine API Calls V2.5x</a></td><td><a name="ZZ_EE_Test1"></a><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html#ZZ_EE_Test1">ZZ_EE_Test1</a></td><td>Success</td><td></td><td>1.007</td>
+</tr>
 <tr valign="top" class="Failure">
-<td><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html">EE Composit2.Event Engine API Calls V2.5x</a></td><td><a name="ZZ_ZustTest"></a><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html#ZZ_ZustTest">ZZ_ZustTest</a></td><td>Failure</td><td>Failing due to failed test step<br>
+<td><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html">EE Composit2.Event Engine API Calls V2.5x</a></td><td><a name="ZZ_EE_Test2"></a><a href="EE Composit2/1_EE Composit2.Event Engine API Calls V2.5x.html#ZZ_EE_Test2">ZZ_EE_Test2</a></td><td>Failure</td><td>Failing due to failed test step<br>
 <br>
-<code><h3><b>Sample Step 1 Failed</b></h3><pre>[Match content of [status]] Comparison failed. Path: [$['status']]; Expected value: [Successx]; Actual value: [Success].<br/></pre><hr/></code></td><td>1.141</td>
+<code><h3><b>Sample Step 2 Failed</b></h3><pre>[Match content of [status]] Comparison failed. Path: [$['status']]; Expected value: [Successx]; Actual value: [Success].<br/></pre><hr/></code></td><td>1.028</td>
 </tr>
 </table>
 </body>
